<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Meal</string>

    <string name="select_app_mode_hint">Select mode</string>
    <string name="client">Client</string>
    <string name="manager">Manager</string>
    <string name="insert_personal_data_hint">Insert name</string>
    <string name="name_edit_text_hint">Name</string>

    <string name="confirmation_button_text">Confirm</string>
    <string name="cancellation_button_text">Cancel</string>

    <string name="field_required_snackbar">Field required</string>

    <string name="title_customer_home_fragment">Home</string>
    <string name="title_customer_menu_fragment">Menu</string>
    <string name="title_customer_maps_fragment">Maps</string>

    <string name="decimal_separator">.</string>

    <string name="leave_room">Leave</string>
    <string name="call_waiter">Call Waiter</string>
    <string name="menu">Menu</string>
    <string name="connected_message">You are connected</string>
    <string name="selected_table_message">You are seating at table</string>

    <string name="table">Table</string>

    <string name="waiter_notification_confirmed">Call to waiter successfully sent</string>
    <string name="waiter_notification_rejected">Too many calls to waiter</string>

    <string name="already_occupied_table_snackbar">Selected table is already occupied</string>
    <string name="unexpected_table_error_snackbar">Unexpected table selection error</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="notifications_settings">Notifications</string>
    <string name="sensors_settings">Sensors</string>
    <string name="change_name_settings">Change name</string>
    <string name="logout_settings">Logout</string>
    <string name="about_settings">About</string>

    <string name="table_confirmation_text">You have chosen the table</string>
    <string name="select_table">Select table</string>

    <string name="manager_closed_virtual_room">Manager closed the virtual room</string>
    <string name="timeout_error_snackbar">Communication failed</string>
    <string name="leave_virtual_dialog_title">You are leaving the room</string>
    <string name="leave_virtual_room_dialog_text">Are you sure you want to leave the virtual room?</string>
    <string name="grant_permission_snackbar_text">Grant permissions from settings</string>



    <!-- alert dialogs -->
    <string name="close_label_alert">Close</string>
    <string name="confirm_label_alert">Confirm</string>
    <string name="cancel_label_alert">Cancel</string>

    <!-- insert password activity -->
    <string name="insert_password_hint">Insert password</string>
    <string name="incorrect_password_snackbar">Incorrect password</string>

    <!-- manager home activity -->
    <string name="button_manager_home_room_text">Create room</string>
    <string name="button_manager_home_menu_text">Show menu</string>
    <string name="button_manager_home_description_text">Show description</string>
    <string name="error_manager_room_snackbar">It is impossible to create a room right now</string>
    <string name="title_manager_home">Home</string>

    <!-- menu e description manager activity -->
    <string name="title_manager_description">Description</string>
    <string name="title_manager_menu">Menu</string>

    <!-- manager room bottom navigation activity -->
    <string name="title_manager_room_waiterNotifications_fragment">Waiter notifications</string>
    <string name="title_manager_room_tableList_fragment">Table list</string>

    <string name="table_prefix">Table:</string>

    <string name="reload_button_label">Reload</string>

    <string name="confirm_close_room_alert">You really want to close the room?</string>

    <!-- waiter notifications fragment-->
    <string name="error_delete_notification_snackbar">Is impossibile to remove this notification right now: try again after the reloading</string>

    <string name="delete_table_button_label">Delete</string>

    <!-- table list fragment-->
    <string name="error_modify_table_snackbar">It is impossible to modify the tables right now: all the tables are alredy assigned</string>
    <string name="error_delete_table_snackbar">It is impossible to delete this table right now: try again after the reloading</string>

    <string name="modify_table_button_label">Modify</string>

    <string name="modify_table_alert">Select the new table for the customer</string>
    <string name="modify_table_error_alert">Error: the table has not changed</string>

    <!-- add table activity-->
    <string name="title_add_table">Assign a free table</string>

    <string name="insert_new_customer_hint">Insert customer name</string>
    <string name="select_table_hint">Select a table</string>

    <string name="no_new_customer_name_snackbar">You have to specify the customer name</string>

    <string name="assign_table">Assign</string>
    <string name="added_table_alert">Table added correctly!</string>
    <string name="error_add_table_alert">Error: the table is alredy assigned</string>
    <string name="error_add_table_snackbar">It is impossible to add a table right now: all the tables are alredy assigned</string>

    <string name="table_removed_snackbar">Manager removed your table</string>
    <string name="table_changed_snackbar">Manager changed your table</string>
    <string name="unexpected_error_snackbar">Unexpected error occurred</string>

    <!-- Welcome notification -->
    <string name="welcome_notification_channel_name">Welcome notification</string>
    <string name="welcome_notification_channel_description">Channel for the welcome notifications.</string>
    <string name="welcome_notification_title_prefix">Welcome to</string>
    <string name="welcome_notification_description">Click here to join the virtual room</string>
</resources>
