<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.unive.quadcore.smartmeal.ui.customer.bottomnavigation.home.HomeFragment"
        android:label="@string/title_customer_home_fragment"
        tools:layout="@layout/fragment_customer_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="it.unive.quadcore.smartmeal.ui.customer.bottomnavigation.menu.MenuFragment"
        android:label="@string/title_customer_menu_fragment"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="it.unive.quadcore.smartmeal.ui.customer.bottomnavigation.maps.MapsFragment"
        android:label="@string/title_customer_maps_fragment"
        tools:layout="@layout/fragment_maps" />
</navigation>
