<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.customer.virtualroom.CustomerVirtualRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/exit_customer_room_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/leave_room"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/call_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/call_waiter"
            app:layout_constraintEnd_toEndOf="@+id/menu_button"
            app:layout_constraintStart_toStartOf="@+id/menu_button"
            app:layout_constraintTop_toBottomOf="@+id/menu_button" />

        <Button
            android:id="@+id/menu_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/menu"
            app:layout_constraintEnd_toEndOf="@+id/table_number_prefix_text_view"
            app:layout_constraintStart_toStartOf="@+id/table_number_prefix_text_view"
            app:layout_constraintTop_toBottomOf="@+id/table_number_text_view" />

        <TextView
            android:id="@+id/connected_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/connected_message"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/table_number_prefix_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/selected_table_message"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/connected_text_view"
            app:layout_constraintStart_toStartOf="@+id/connected_text_view"
            app:layout_constraintTop_toBottomOf="@+id/connected_text_view" />

        <TextView
            android:id="@+id/table_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="22"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/table_number_prefix_text_view"
            app:layout_constraintStart_toStartOf="@+id/table_number_prefix_text_view"
            app:layout_constraintTop_toBottomOf="@+id/table_number_prefix_text_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
